--- a/style.scss
+++ b/style.scss
@@ -130,3 +130,82 @@
     }
   }
 }
+
+// .grid-container3 {
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+//   grid-auto-rows: 100px;
+//   gap: 8px;
+
+//   &__item {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     background-color: pink;
+//     border-radius: 8px;
+//     box-sizing: border-box;
+//     font-size: 24px;
+
+//     $blockColors: (
+//       "1": #ff4c4c,
+//       "2": #ffa54b,
+//       "3": #38a8f9,
+//       "4": #54fab5,
+//       "5": #38a8f9,
+//       "6": #7f3aee,
+//     );
+
+//     @each $name, $color in $blockColors {
+//       &:nth-child(#{$name}) {
+//         background: $color;
+//       }
+//     }
+//   }
+// }
+
+.grid-container3 {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  &__item {
+    flex: 0 0 calc(50% - 4px);
+    height: 100px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: pink;
+    border-radius: 8px;
+    box-sizing: border-box;
+    font-size: 24px;
+
+    $blockColors: (
+      "1": #ff4c4c,
+      "2": #ffa54b,
+      "3": #38a8f9,
+      "4": #54fab5,
+      "5": #38a8f9,
+      "6": #7f3aee,
+    );
+
+    @each $name, $color in $blockColors {
+      &:nth-child(#{$name}) {
+        background: $color;
+      }
+    }
+  }
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 40px;
+  margin: 20px auto 0;
+  border: 1px solid #38a8f9;
+  border-radius: 8px;
+  background-color: #fff;
+}
