--- a/style.css
+++ b/style.css
@@ -189,6 +189,88 @@
   background: #7f3aee;
 }
 
+.grid-container4 {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "title title comment" "level name size";
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 100px;
+  gap: 8px;
+}
+
+.grid-container4__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: pink;
+  border-radius: 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 24px;
+}
+
+.grid-container4__item--title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: title;
+}
+
+.grid-container4__item--level {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: level;
+}
+
+.grid-container4__item--name {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: name;
+}
+
+.grid-container4__item--size {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: size;
+}
+
+.grid-container4__item--comment {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: comment;
+}
+
+.grid-container4__item:nth-child(1) {
+  background: #ff4c4c;
+}
+
+.grid-container4__item:nth-child(2) {
+  background: #ffa54b;
+}
+
+.grid-container4__item:nth-child(3) {
+  background: #38a8f9;
+}
+
+.grid-container4__item:nth-child(4) {
+  background: #54fab5;
+}
+
+.grid-container4__item:nth-child(5) {
+  background: #7f3aee;
+}
+
+.grid-container4__item:nth-child(6) {
+  background: #7f3aee;
+}
+
 button {
   display: -webkit-box;
   display: -ms-flexbox;
