--- a/style.scss
+++ b/style.scss
@@ -198,6 +198,57 @@
   }
 }
 
+.grid-container4 {
+  display: grid;
+  grid-template-areas:
+    "title title comment"
+    "level name size";
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 100px;
+  gap: 8px;
+
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: pink;
+    border-radius: 8px;
+    box-sizing: border-box;
+    font-size: 24px;
+
+    &--title {
+      grid-area: title;
+    }
+    &--level {
+      grid-area: level;
+    }
+    &--name {
+      grid-area: name;
+    }
+    &--size {
+      grid-area: size;
+    }
+    &--comment {
+      grid-area: comment;
+    }
+
+    $blockColors: (
+      "1": #ff4c4c,
+      "2": #ffa54b,
+      "3": #38a8f9,
+      "4": #54fab5,
+      "5": #7f3aee,
+      "6": #7f3aee,
+    );
+
+    @each $name, $color in $blockColors {
+      &:nth-child(#{$name}) {
+        background: $color;
+      }
+    }
+  }
+}
+
 button {
   display: flex;
   align-items: center;
